# alyx-local

./: .env  .gitattributes  .gitignore  .pdm-python  Dockerfile  README.Docker.md  README.md  compose.yaml  pyproject.toml  requirements.txt  requirements_frozen.txt  setup.py
.production/: entrypoint.bash  entrypoint.sh  nginx.conf
alyx/actions/: admin.py  models.py  serializers.py  training_control.py  urls.py  views.py  water_control.py
alyx/actions/migrations/: 0020_migrating_narrative_markdown.py  0023_data_repository_inclusion_chain.py
alyx/alyx/: base.py  settings.py  settings_lab_template.py  urls.py
alyx/data/: admin.py  models.py  serializers.py  tests.py  transfers.py  urls.py  views.py
alyx/data/fixtures/: data.dataformat.json  data.datasettype.json
alyx/data/management/commands/: files.py
alyx/data/migrations/: 0018_name_extras_to_extra_step1.py  0019_name_extras_to_extra_step2.py  0021_adding_hash_to_file_records.py  0022_datasets_blank_allowed.py
alyx/experiments/: admin.py  models.py  serializers.py  tests_rest.py  views.py
alyx/jobs/: admin.py  models.py  serializers.py  urls.py  views.py
alyx/jobs/migrations/: 0009_remove_task_unique_name_arguments_per_session_and_more.py
alyx/misc/: admin.py  models.py  urls.py  views.py
alyx/misc/fixtures/: misc.lab.json
alyx/misc/management/commands/: one_cache.py
alyx/misc/migrations/: 00010_create_admin_user.py  00011_create_natsort_collation.py  00012_create_role_readaccess.py  0001_initial.py  0002_auto_20181119_0930.py  0009_auto_20211122_1535.py
alyx/static/admin/css/: base.css  forms.css  manager_ribbon.css
alyx/subjects/: admin.py  models.py  serializers.py
alyx/subjects/migrations/: 0011_migrating_dataset_type_model.py  0012_data_repository_inclusion_chain.py
alyx/templates/: session_tasks.html  task_logs.html  training.html  training_history.html
alyx/templates/admin/: base.html  session_change_form.html
alyx/templates/markdownx/: widget.html
alyx/templates/markdownx-side-by-side/: widget.html
app/alyx/actions/: admin.py  notifications.py
app/alyx/actions/migrations/: 0021_migrating_narrative_markdown.py  0022_migrating_narrative_markdown.py
app/alyx/alyx/: settings.py
app/alyx/data/: serializers.py  transfers.py  views.py
app/alyx/data/migrations/: 0001_initial.py  0002_auto_20181015_0914.py  0014_data_model_change.py  0015_data_unique_obj_attr.py
app/alyx/jobs/: models.py
app/alyx/misc/: urls.py
app/alyx/subjects/: models.py
app/alyx/templates/: training.html
docker/: Dockerfile.django  Dockerfile.postgres  README.Docker.md  compose.env  django_entrypoint.bash
docker/celery/: Dockerfile
docker/celery_server/: Dockerfile  celery.env
docker/django/: Dockerfile  entrypoint.sh  restore.sh  restore_on_run.sh
docker/django_server/: Dockerfile  custom_settings.py  entrypoint.sh
docker/install_config/: hosts.txt
docker/nginx/: nginx.conf
docker/nginx_server/: nginx.conf
docker/pgadmin/: pgadmin.env  servers.json
docker/postgres/: .gitignore  Dockerfile  db-default-password
docker/postgres_db/: db-secure-password
docker/rabbitmq/: Dockerfile  entrypoint.sh  rabbitmq.conf
docker/templates/: custom_settings_template.py  servers.json
docs/: .gitignore  conf.py  gettingstarted.md
legacy/: _setup.py  requirements.txt  settings_ci.py
scripts/: backup.sh  backup_db.sh  dump_db.sh  load_db.sh  restore_db.sh
scripts/sync_ucl/: prune_cortexlab.py
src/: manage.py
src/alyx/: __init__.py
src/alyx/actions/: __init__.py  admin.py  apps.py  filters.py  models.py  notifications.py  serializers.py  tests.py  tests_rest.py  training_control.py  urls.py  views.py  water_control.py
src/alyx/actions/migrations/: 0001_initial.py  0002_auto_20181015_0914.py  0003_auto_20181119_0930.py  0004_auto_20181122_1923.py  0005_auto_20190124_1025.py  0006_cull_cullmethod_cullreason.py  0007_session_qc.py  0008_alter_session_qc.py  0009_ephyssession.py  0010_session_extended_qc.py  0011_auto_20200317_1055.py  0012_change_qc_enum.py  0013_auto_20201119_0953.py  0014_session_auto_datetime.py  0015_auto_20210624_1253.py  0016_chronicrecording.py  0017_alter_chronicrecording_subject_and_more.py  0018_session_projects_alter_session_project.py  0019_migrating_dataset_type_model.py  0020_migrating_narrative_markdown.py  0021_migrating_narrative_markdown.py  0022_migrating_narrative_markdown.py  0023_data_repository_inclusion_chain.py  0024_imagingsession_alter_chronicrecording_location_and_more.py
src/alyx/actions/tests/: tests.py  tests_rest.py
src/alyx/base/: admins.py  adminsite.py  base.py  filters.py  logging.py  mails.py  models.py  permissions.py  queries.py  serializers.py  settings.py  settings_lab_template.py  urls.py  utils.py  widgets.py  wsgi.py
src/alyx/base/tests/: __init__.py
src/alyx/data/: __init__.py  admin.py  apps.py  filters.py  models.py  serializers.py  tests_rest.py  transfers.py  urls.py  views.py
src/alyx/data/migrations/: 0001_initial.py  0002_auto_20181015_0914.py  0003_auto_20190315_1716.py  0004_dataset_filesize_int64.py  0005_dataset_collection.py  0006_dataset_hash_version.py  0007_dataset_auto_datetime.py  0008_dataset_revision_tag.py  0009_auto_20210624_1253.py  0010_alter_dataset_created_by_and_more.py  0011_alter_datasettype_filename_pattern.py  0012_alter_datasettype_filename_pattern_and_more.py  0013_migrating_dataset_type_model.py  (+12 more)
src/alyx/docker_install/: __init__.py  base.py  containers.py  files.py  installation.py  utils.py  verifications.py
src/alyx/experiments/: __init__.py  admin.py  apps.py  filters.py  models.py  serializers.py  tests.py  tests_rest.py  urls.py  views.py
src/alyx/jobs/: __init__.py  admin.py  apps.py  celery_pypelines.toml  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
src/alyx/misc/: __init__.py  admin.py  apps.py  filters.py  models.py  serializers.py  tests.py  tests_rest.py  urls.py  views.py
src/alyx/subjects/: __init__.py  admin.py  apps.py  filters.py  models.py  serializers.py  tests.py  tests_rest.py  urls.py  views.py
tests/: test_base.py
(+67 files in other folders)
