[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "haiss-alyx"
version = "2.1.0"
description = "A brief description of your project"
authors = [{ name = "JostTim", email = "timothe.jost-mousseau@pasteur.fr" }]
license = { text = "MIT" }
requires-python = ">=3.12.3"
dependencies = [
    "django>=5.1.3",
    "django-admin-list-filter-dropdown>=1.0.3",
    "django-admin-rangefilter>=0.13.2",
    "django-autocomplete-light>=3.11.0",
    "django-cleanup>=9.0.0",
    "django-filter>=24.3",
    "django-jsoneditor>=0.2.4",
    "django-markdownx>=4.0.7",
    "django-mptt>=0.16.0",
    "django-polymorphic>=3.1.0",
    "django-reversion>=5.1.0",
    "django-storages>=1.14.4",
    "django-structlog>=8.1.0",
    "django-test-without-migrations>=0.6",
    "djangorestframework>=3.15.2",
    "docutils>=0.21.2",
    "drfdocs>=0.0.11",
    "gunicorn>=23.0.0",
    "colorlog>=6.9.0",
    "globus-cli>=3.31.0",
    "processing-pypelines[celery]>=0.0.66",
    "pytz>=2024.2",
    "tzlocal>=5.2",
    "structlog>=24.4.0",
    "psycopg2-binary>=2.9.10",
    "matplotlib>=3.9.2",
    "alyx-connector>=2.1.10",
    "setuptools>=75.3.0",
    "coreapi>=2.3.3",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.wheel]
universal = true

[tool.flake8]
ignore = ["E117", "E265", "E731", "F403", "E741", "E722", "W504"]
max-line-length = 99
exclude = ["migrations"]

[tool.coverage.run]
branch = false
source = ["alyx"]
omit = []

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "pass",
    "return$",
]
show_missing = true

[tool.pdm]
